--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 			                    <i class="fa fa-bars"></i>
 			                </button>
-			                <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png"</img> </a>
+			                <a class="navbar-brand" href="index.html"><img src="assets/images/logomain.png"</img> </a>
 			            </div><!--/.navbar-header-->
 			            <!-- End Header Navigation -->
 
