--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="col-md-12 text-center">
 						<div class="header-text">
 							<h2>hi , I'm <br> Pulkit Aggarwal .</h2>
-							<p>| ui/ux designer || Web Designer || Front-End Web Developer |</p>
+							<p>Front-End Web Developer || ui/ux designer || Web Designer </p>
 							<br>
 							<br>
 							<a href="#about"> About Me</a>
@@ -422,7 +422,7 @@
 								<div class="contact-adress">
 									<div class="contact-add-head">
 										<h3>Pulkit Aggarwal</h3>
-										<p>uI/uX designer</p>
+										<p>Front-End Web Developer || ui/ux designer || Web Designer</p>
 									</div>
 									<div class="contact-add-info">
 										
